k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copeuch-ingress
  namespace: coopeuch-demo
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    meta.helm.sh/release-name: copeuch-app
    meta.helm.sh/release-namespace: coopeuch-demo
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /copeuch
        pathType: Prefix
        backend:
          service:
            name: copeuch-svc
            port:
              number: 80
